2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoGenericClass.cs: Implement ResolveInternal.

2010-04-08 Rodrigo Kumpera  <rkumpera@novell.com>

	* MonoField.cs (Get|Set)Value: Check if obj is compatible
	with field's class.

2010-04-02  Marek Safar  <marek.safar@gmail.com>

	* MethodBase.cs: Made GetParameterCount abstract and implement
	where missing to avoid redundant allocations.

2010-04-01 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs (GetMethod): Check for null 'types' argument.

	* MonoModule.cs (GetMethodImpl): Special case when 'types'
	is null and call Type::GetMethod(string) directly.
	This is ok since proper checking of the 'types' overload
	is done by callers.

2010-04-01  Jb Evain  <jbevain@novell.com>

	* Module.cs: make Module abstract on net_4_0.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement MetadataToken, FullyQualifiedName,
	ModuleVersionId, MDStreamVersion, ScopeName,
	Name, Assembly.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement GetSignerCertificate and
	GetTypes.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement ResolveMember, ResolveMethod,
	ResolveString, ResolveType, ResolveSignature and
	GetMethods.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement GetField, GetFields,
	GetMethodImpl, GetPEKind, GetType, IsDefined and
	ResolveField.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement GetCustomAttributesData.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement GetCustomAttributes.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Module.cs:
	* MonoModule.cs: Implement FindTypes.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>

	* Assembly.cs: Raise the right exception.

2010-03-31 Rodrigo Kumpera  <rkumpera@novell.com>
